# TeamFlow

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  Trunk.toml  codecov.yml  eslint.config.js  index.html  js-green-licenses.json  package-lock.json  package.json  release-notes.config.json  release-notes.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: development-gate.yml  release-candidate.yml  release-notes.json  release-notes.yml  release.yml  tagger.yml
src/: App.tsx  app.rs  foobar.css  main.tsx
src-tauri/: Cargo.toml  __tauri.macos.conf.json  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: main.test.ts
